# mempalace-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entities.json  main.py  mempalace.yaml  pyproject.toml  requirements.txt  setup.sh  start.sh
core/: config.py
routers/: __init__.py  knowledge.py  search.py  store.py
services/: __init__.py  knowledge_graph.py  searcher.py  storage.py
